# Audio-Calculator

./: .gitignore  App.xaml  App.xaml.cs  AppSettings.cs  AudioCalculator.csproj  DonateWindow.xaml  DonateWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  RegisterContextMenu.reg  SettingsWindow.xaml  SettingsWindow.xaml.cs  UnregisterContextMenu.reg  开发说明书.html
rust-version/: Cargo.toml  README.md  build.rs
rust-version/src/: app.rs  audio.rs  main.rs  screenshot.rs  settings.rs  shell.rs
website/: index.html
