[package]
name = "audio-calculator"
version = "2.0.0"
edition = "2021"
authors = ["晓旭"]
description = "音频时长统计与结算工具 - Rust版"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
symphonia = { version = "0.5", features = ["all"] }
rfd = "0.15"
walkdir = "2.5"
arboard = "3.4"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
open = "5.3"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.bundle]
name = "音频时长统计"
identifier = "com.xiaoxu.audiocalculator"
icon = ["../logo.ico"]

[[bin]]
name = "audio-calculator"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"
